# triplecore

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  ROADMAP.md  SPEC.md  TRIPLECORE_MONOREPO_PROJECT_PLAN.md  VISION.md  justfile  package.json  pyproject.toml
.github/workflows/: ci.yml
crates/triplecore/: Cargo.toml
crates/triplecore-cli/: Cargo.toml
crates/triplecore-cli/src/: main.rs
crates/triplecore-diagnostics/: Cargo.toml
crates/triplecore-diagnostics/src/: diagnostic.rs  lib.rs  severity.rs
crates/triplecore-jsonld/: Cargo.toml
crates/triplecore-jsonld/src/: lib.rs
crates/triplecore-mapping/: Cargo.toml
crates/triplecore-mapping/src/: lib.rs  mapping.rs
crates/triplecore-ontology/: Cargo.toml
crates/triplecore-ontology/src/: lib.rs  ontology.rs
crates/triplecore-planner/: Cargo.toml
crates/triplecore-planner/src/: lib.rs  plan.rs
crates/triplecore-query/: Cargo.toml
crates/triplecore-query/src/: lib.rs  query.rs
crates/triplecore-rdf/: Cargo.toml
crates/triplecore-rdf/src/: blank_node.rs  error.rs  graph.rs  iri.rs  lib.rs  literal.rs  namespace.rs  quad.rs  term.rs  triple.rs
crates/triplecore-reason/: Cargo.toml
crates/triplecore-reason/src/: lib.rs
crates/triplecore-turtle/: Cargo.toml
crates/triplecore-turtle/src/: lib.rs
crates/triplecore/src/: lib.rs
crates/triplecore/tests/: integration.rs
docs/: dependencies.md  getting-started.md  index.md  rdf-model.md
docs/decisions/: 0001-rust-core.md  0008-external-crate-dependencies.md
examples/rust/: graph_core.rs
python/tests/: test_placeholder.py
python/triplecore/: __init__.py
schemas/: diagnostics.schema.json  mapping.schema.json  ontology.schema.json  query.schema.json
tests/fixtures/: people.json
