[project]
name = "triplecore"
version = "0.1.0"
description = "Semantic runtime for ontology-native tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/triplecore-py/Cargo.toml"
python-source = "python"
module-name = "triplecore._native"
