[package]
name = "triplecore-jsonld"
description = "JSON-LD serialization for TripleCore (preview)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
triplecore-rdf = { workspace = true }
