[package]
name = "triplecore-planner"
description = "Planning and explain engine for TripleCore (preview)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
triplecore-diagnostics = { workspace = true }
triplecore-query = { workspace = true }
