[package]
name = "triplecore-reason"
description = "Reasoning primitives for TripleCore (preview)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
triplecore-rdf = { workspace = true }
